# robust-python

./: pyproject.toml
ch14_runtime_checking/: model.yml  pydantic.py  typed_dict.py
ch20_static_analysis/: pylint.py
ch22_acceptance/features/: food.feature
ch22_acceptance/features/steps/: steps.py
ch3/: optional.py  pyproject.toml
ch4_ConstrainingTypes/: union.py
ch4_constrainingTypes/: final.py
ch5_collectionTypes/: annotate.py
